--- a/config.yaml
+++ b/config.yaml
@@ -1,4 +1,4 @@
-baseURL: https://example.org/
+baseURL: https://rohin-nayar.github.io/Finance-Blog/
 languageCode: en-us
 title: My New Hugo Site
 module:
