--- a/config.yaml
+++ b/config.yaml
@@ -5,3 +5,15 @@ module:
   imports:
   - path: github.com/adityatelange/hugo-PaperMod
 theme: ["PaperMod"]
+params:
+  homeInfoParams:
+    Title: Hi there wave
+    Content: Welcome to my blog
+
+  socialIcons: # optional
+    - name: "<LinkedIn>"
+      url: "<https://www.linkedin.com/in/rohinnayar/>"
+    - name: "<GitHub>"
+      url: "<https://github.com/rohin-nayar>"
+    - name: "LeetCode"
+      url: "<https://leetcode.com/u/RohinN/>"
